Forgot to remove 'warm up' text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Ludum Dare Warmup 36</title>
+        <title>Ludum Dare 36</title>
         //#mode dev
         <script src="src/bare/index.js"></script>
         <script src="lib/basejs/src/base.js"></script>
