--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Ludum Dare 36</title>
-        //#mode dev
-        <script src="src/bare/index.js"></script>
-        <script src="lib/basejs/src/base.js"></script>
-        //#mode none
-        <script src="bootstrap.min.js"></script>
+        <title>Ludum Dare Entry</title>
+        <script type="module" src="/node_modules/aucguy-ludum-dare-base/lib/common/bootstrap.js"></script>
+        <script type="module" src="/node_modules/aucguy-ludum-dare-base/lib/common/init.js"></script>
+        <script src="/node_modules/phaser-ce/build/phaser.js"></script><script src="/node_modules/aucguy-ludum-dare-base/lib/canvg.js"></script>
     </head>
     <body>
       <span id="gameContainer">
-        <canvas id="display" width="600", height="400"></canvas>
+        <img id="loadingLogo" src="/assets/image/logo.png"></img>
         <div id="error div" style="display:none">
 			    Oh, no! an error has occurred.
 			    <p>
